--- a/nasdaq.ipynb
+++ b/nasdaq.ipynb
@@ -29,6 +29,15 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "f56aa961",
+   "metadata": {},
+   "source": [
+    "# AT&T"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "id": "9432ad73",
@@ -488,153 +497,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "352a37d7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Ex-Dividend</th>\n",
-       "      <th>Split Ratio</th>\n",
-       "      <th>Adj. Open</th>\n",
-       "      <th>Adj. High</th>\n",
-       "      <th>Adj. Low</th>\n",
-       "      <th>Adj. Close</th>\n",
-       "      <th>Adj. Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2007-04-19</td>\n",
-       "      <td>25.10</td>\n",
-       "      <td>27.61</td>\n",
-       "      <td>24.50</td>\n",
-       "      <td>27.40</td>\n",
-       "      <td>31724800.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>33.684159</td>\n",
-       "      <td>37.052575</td>\n",
-       "      <td>32.878960</td>\n",
-       "      <td>36.770755</td>\n",
-       "      <td>15862400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2007-04-20</td>\n",
-       "      <td>27.40</td>\n",
-       "      <td>28.80</td>\n",
-       "      <td>27.10</td>\n",
-       "      <td>28.55</td>\n",
-       "      <td>6109400.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>36.770755</td>\n",
-       "      <td>38.649553</td>\n",
-       "      <td>36.368156</td>\n",
-       "      <td>38.314054</td>\n",
-       "      <td>3054700.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2007-04-23</td>\n",
-       "      <td>28.60</td>\n",
-       "      <td>28.94</td>\n",
-       "      <td>28.29</td>\n",
-       "      <td>28.75</td>\n",
-       "      <td>3752800.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>38.381154</td>\n",
-       "      <td>38.837433</td>\n",
-       "      <td>37.965134</td>\n",
-       "      <td>38.582453</td>\n",
-       "      <td>1876400.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2007-04-24</td>\n",
-       "      <td>28.51</td>\n",
-       "      <td>29.40</td>\n",
-       "      <td>28.51</td>\n",
-       "      <td>29.20</td>\n",
-       "      <td>3065800.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>38.260374</td>\n",
-       "      <td>39.454752</td>\n",
-       "      <td>38.260374</td>\n",
-       "      <td>39.186353</td>\n",
-       "      <td>1532900.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>2007-04-25</td>\n",
-       "      <td>29.55</td>\n",
-       "      <td>29.75</td>\n",
-       "      <td>28.51</td>\n",
-       "      <td>28.61</td>\n",
-       "      <td>2450600.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>39.656052</td>\n",
-       "      <td>39.924452</td>\n",
-       "      <td>38.260374</td>\n",
-       "      <td>38.394574</td>\n",
-       "      <td>1225300.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Date   Open   High    Low  Close      Volume  Ex-Dividend  \\\n",
-       "0  2007-04-19  25.10  27.61  24.50  27.40  31724800.0          0.0   \n",
-       "1  2007-04-20  27.40  28.80  27.10  28.55   6109400.0          0.0   \n",
-       "2  2007-04-23  28.60  28.94  28.29  28.75   3752800.0          0.0   \n",
-       "3  2007-04-24  28.51  29.40  28.51  29.20   3065800.0          0.0   \n",
-       "4  2007-04-25  29.55  29.75  28.51  28.61   2450600.0          0.0   \n",
-       "\n",
-       "   Split Ratio  Adj. Open  Adj. High   Adj. Low  Adj. Close  Adj. Volume  \n",
-       "0          1.0  33.684159  37.052575  32.878960   36.770755   15862400.0  \n",
-       "1          1.0  36.770755  38.649553  36.368156   38.314054    3054700.0  \n",
-       "2          1.0  38.381154  38.837433  37.965134   38.582453    1876400.0  \n",
-       "3          1.0  38.260374  39.454752  38.260374   39.186353    1532900.0  \n",
-       "4          1.0  39.656052  39.924452  38.260374   38.394574    1225300.0  "
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "# T-Mobile"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1ebc4ef1",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "tmobile_data = pd.read_csv(\"TMUS.csv\")\n",
     "tmobile_data.head()"
@@ -895,153 +771,20 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "attachments": {},
+   "cell_type": "markdown",
    "id": "1a706d54",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Date</th>\n",
-       "      <th>Open</th>\n",
-       "      <th>High</th>\n",
-       "      <th>Low</th>\n",
-       "      <th>Close</th>\n",
-       "      <th>Volume</th>\n",
-       "      <th>Ex-Dividend</th>\n",
-       "      <th>Split Ratio</th>\n",
-       "      <th>Adj. Open</th>\n",
-       "      <th>Adj. High</th>\n",
-       "      <th>Adj. Low</th>\n",
-       "      <th>Adj. Close</th>\n",
-       "      <th>Adj. Volume</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1983-11-21</td>\n",
-       "      <td>70.62</td>\n",
-       "      <td>70.75</td>\n",
-       "      <td>65.62</td>\n",
-       "      <td>70.25</td>\n",
-       "      <td>627575.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.649837</td>\n",
-       "      <td>1.652874</td>\n",
-       "      <td>1.533026</td>\n",
-       "      <td>1.641193</td>\n",
-       "      <td>5020600.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1983-11-22</td>\n",
-       "      <td>70.25</td>\n",
-       "      <td>71.25</td>\n",
-       "      <td>69.87</td>\n",
-       "      <td>70.00</td>\n",
-       "      <td>333338.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.641193</td>\n",
-       "      <td>1.664556</td>\n",
-       "      <td>1.632316</td>\n",
-       "      <td>1.635353</td>\n",
-       "      <td>2666704.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1983-11-23</td>\n",
-       "      <td>70.00</td>\n",
-       "      <td>70.25</td>\n",
-       "      <td>69.25</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>143988.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.635353</td>\n",
-       "      <td>1.641193</td>\n",
-       "      <td>1.617831</td>\n",
-       "      <td>1.626475</td>\n",
-       "      <td>1151904.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1983-11-25</td>\n",
-       "      <td>69.62</td>\n",
-       "      <td>69.75</td>\n",
-       "      <td>68.87</td>\n",
-       "      <td>68.87</td>\n",
-       "      <td>221475.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.626475</td>\n",
-       "      <td>1.629512</td>\n",
-       "      <td>1.608954</td>\n",
-       "      <td>1.608954</td>\n",
-       "      <td>1771800.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1983-11-28</td>\n",
-       "      <td>68.50</td>\n",
-       "      <td>68.50</td>\n",
-       "      <td>66.75</td>\n",
-       "      <td>67.00</td>\n",
-       "      <td>295975.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.600310</td>\n",
-       "      <td>1.600310</td>\n",
-       "      <td>1.559426</td>\n",
-       "      <td>1.565266</td>\n",
-       "      <td>2367800.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         Date   Open   High    Low  Close    Volume  Ex-Dividend  Split Ratio  \\\n",
-       "0  1983-11-21  70.62  70.75  65.62  70.25  627575.0          0.0          1.0   \n",
-       "1  1983-11-22  70.25  71.25  69.87  70.00  333338.0          0.0          1.0   \n",
-       "2  1983-11-23  70.00  70.25  69.25  69.62  143988.0          0.0          1.0   \n",
-       "3  1983-11-25  69.62  69.75  68.87  68.87  221475.0          0.0          1.0   \n",
-       "4  1983-11-28  68.50  68.50  66.75  67.00  295975.0          0.0          1.0   \n",
-       "\n",
-       "   Adj. Open  Adj. High  Adj. Low  Adj. Close  Adj. Volume  \n",
-       "0   1.649837   1.652874  1.533026    1.641193    5020600.0  \n",
-       "1   1.641193   1.664556  1.632316    1.635353    2666704.0  \n",
-       "2   1.635353   1.641193  1.617831    1.626475    1151904.0  \n",
-       "3   1.626475   1.629512  1.608954    1.608954    1771800.0  \n",
-       "4   1.600310   1.600310  1.559426    1.565266    2367800.0  "
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "source": [
+    "# Verizon"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "24c6874a",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "verizon_data = pd.read_csv(\"VZ.csv\")\n",
     "verizon_data.head()"
