added line plot

--- a/nasdaq.ipynb
+++ b/nasdaq.ipynb
@@ -1295,7 +1295,7 @@
     }
    ],
    "source": [
-    "plt.scatter(verizon_data[\"Date\"], verizon_data[\"Close\"])\n",
+    "plt.plot(verizon_data[\"Date\"], verizon_data[\"Close\"])\n",
     "plt.title(\"Verizon Closing Price Over Time\")\n",
     "plt.xlabel(\"Date\")\n",
     "plt.ylabel(\"Closing Price\")\n",
