--- a/NASDAQ assignment.ipynb
+++ b/NASDAQ assignment.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
-   "id": "bc94cb54",
+   "execution_count": 79,
+   "id": "bb37c021",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,8 +18,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
-   "id": "bdffede2",
+   "execution_count": 87,
+   "id": "ee9216c4",
    "metadata": {},
    "outputs": [
     {
@@ -257,18 +257,18 @@
        "</div>"
       ],
       "text/plain": [
-       "                    Date   Open     High    Low  Close      Volume  \\\n",
-       "AT&T    0     2018-03-27  34.85  35.2000  34.69  34.90  33198184.0   \n",
-       "        1     2018-03-26  35.06  35.2866  34.44  34.69  31281785.0   \n",
-       "        2     2018-03-23  35.37  35.9900  34.55  34.70  34260415.0   \n",
-       "        3     2018-03-22  35.95  36.0400  35.36  35.37  28063362.0   \n",
-       "        4     2018-03-21  36.34  36.5000  36.00  36.00  16776049.0   \n",
-       "...                  ...    ...      ...    ...    ...         ...   \n",
-       "Verizon 8653  1983-11-28  68.50  68.5000  66.75  67.00    295975.0   \n",
-       "        8654  1983-11-25  69.62  69.7500  68.87  68.87    221475.0   \n",
-       "        8655  1983-11-23  70.00  70.2500  69.25  69.62    143988.0   \n",
-       "        8656  1983-11-22  70.25  71.2500  69.87  70.00    333338.0   \n",
-       "        8657  1983-11-21  70.62  70.7500  65.62  70.25    627575.0   \n",
+       "                   Date   Open     High    Low  Close      Volume  \\\n",
+       "AT&T    0    2018-03-27  34.85  35.2000  34.69  34.90  33198184.0   \n",
+       "        1    2018-03-26  35.06  35.2866  34.44  34.69  31281785.0   \n",
+       "        2    2018-03-23  35.37  35.9900  34.55  34.70  34260415.0   \n",
+       "        3    2018-03-22  35.95  36.0400  35.36  35.37  28063362.0   \n",
+       "        4    2018-03-21  36.34  36.5000  36.00  36.00  16776049.0   \n",
+       "...                 ...    ...      ...    ...    ...         ...   \n",
+       "Verizon 8653 1983-11-28  68.50  68.5000  66.75  67.00    295975.0   \n",
+       "        8654 1983-11-25  69.62  69.7500  68.87  68.87    221475.0   \n",
+       "        8655 1983-11-23  70.00  70.2500  69.25  69.62    143988.0   \n",
+       "        8656 1983-11-22  70.25  71.2500  69.87  70.00    333338.0   \n",
+       "        8657 1983-11-21  70.62  70.7500  65.62  70.25    627575.0   \n",
        "\n",
        "              Ex-Dividend  Split Ratio  Adj. Open  Adj. High   Adj. Low  \\\n",
        "AT&T    0             0.0          1.0  34.850000  35.200000  34.690000   \n",
@@ -299,7 +299,7 @@
        "[19904 rows x 14 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 87,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,10 +308,19 @@
     "t_mobile = pd.read_csv('resources/WIKI-TMUS copy.csv', delimiter=',')\n",
     "att = pd.read_csv('resources/WIKI-T copy.csv', delimiter=',')\n",
     "verizon = pd.read_csv('resources/WIKI-VZ copy.csv', delimiter=',')\n",
+    "\n",
+    "# Convert the date column to datetime object\n",
+    "t_mobile['Date'] = pd.to_datetime(t_mobile['Date'])\n",
+    "att['Date'] = pd.to_datetime(att['Date'])\n",
+    "verizon['Date'] = pd.to_datetime(verizon['Date'])\n",
+    "\n",
     "# Add 'level_0' column to each dataframe\n",
     "t_mobile['level_0'] = 'T-Mobile'\n",
     "att['level_0'] = 'AT&T'\n",
     "verizon['level_0'] = 'Verizon'\n",
+    "\n",
+    "\n",
+    "\n",
     "# Merge the three dataframes together\n",
     "combined_df = pd.concat([att, t_mobile, verizon], keys=['AT&T', 'T-Mobile', 'Verizon'])\n",
     "\n",
@@ -321,17 +330,208 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "0c3866ad",
+   "id": "fc50cf25",
    "metadata": {},
    "outputs": [],
    "source": [
-    "combined_df.to_csv('combined_data.csv', index=False)"
+    "#combined_df.to_csv('combined_data.csv', index=False)"
    ]
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "0aaf0529",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "ad97b292",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Ex-Dividend</th>\n",
+       "      <th>Split Ratio</th>\n",
+       "      <th>Adj. Open</th>\n",
+       "      <th>Adj. High</th>\n",
+       "      <th>Adj. Low</th>\n",
+       "      <th>Adj. Close</th>\n",
+       "      <th>Adj. Volume</th>\n",
+       "      <th>level_0</th>\n",
+       "      <th>Quarter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">AT&amp;T</th>\n",
+       "      <th>0</th>\n",
+       "      <td>2018-03-27</td>\n",
+       "      <td>34.85</td>\n",
+       "      <td>35.2000</td>\n",
+       "      <td>34.69</td>\n",
+       "      <td>34.90</td>\n",
+       "      <td>33198184.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>34.85</td>\n",
+       "      <td>35.2000</td>\n",
+       "      <td>34.69</td>\n",
+       "      <td>34.90</td>\n",
+       "      <td>33198184.0</td>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2018Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2018-03-26</td>\n",
+       "      <td>35.06</td>\n",
+       "      <td>35.2866</td>\n",
+       "      <td>34.44</td>\n",
+       "      <td>34.69</td>\n",
+       "      <td>31281785.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.06</td>\n",
+       "      <td>35.2866</td>\n",
+       "      <td>34.44</td>\n",
+       "      <td>34.69</td>\n",
+       "      <td>31281785.0</td>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2018Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2018-03-23</td>\n",
+       "      <td>35.37</td>\n",
+       "      <td>35.9900</td>\n",
+       "      <td>34.55</td>\n",
+       "      <td>34.70</td>\n",
+       "      <td>34260415.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.37</td>\n",
+       "      <td>35.9900</td>\n",
+       "      <td>34.55</td>\n",
+       "      <td>34.70</td>\n",
+       "      <td>34260415.0</td>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2018Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2018-03-22</td>\n",
+       "      <td>35.95</td>\n",
+       "      <td>36.0400</td>\n",
+       "      <td>35.36</td>\n",
+       "      <td>35.37</td>\n",
+       "      <td>28063362.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>35.95</td>\n",
+       "      <td>36.0400</td>\n",
+       "      <td>35.36</td>\n",
+       "      <td>35.37</td>\n",
+       "      <td>28063362.0</td>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2018Q1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2018-03-21</td>\n",
+       "      <td>36.34</td>\n",
+       "      <td>36.5000</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>16776049.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>36.34</td>\n",
+       "      <td>36.5000</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>36.00</td>\n",
+       "      <td>16776049.0</td>\n",
+       "      <td>AT&amp;T</td>\n",
+       "      <td>2018Q1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             Date   Open     High    Low  Close      Volume  Ex-Dividend  \\\n",
+       "AT&T 0 2018-03-27  34.85  35.2000  34.69  34.90  33198184.0          0.0   \n",
+       "     1 2018-03-26  35.06  35.2866  34.44  34.69  31281785.0          0.0   \n",
+       "     2 2018-03-23  35.37  35.9900  34.55  34.70  34260415.0          0.0   \n",
+       "     3 2018-03-22  35.95  36.0400  35.36  35.37  28063362.0          0.0   \n",
+       "     4 2018-03-21  36.34  36.5000  36.00  36.00  16776049.0          0.0   \n",
+       "\n",
+       "        Split Ratio  Adj. Open  Adj. High  Adj. Low  Adj. Close  Adj. Volume  \\\n",
+       "AT&T 0          1.0      34.85    35.2000     34.69       34.90   33198184.0   \n",
+       "     1          1.0      35.06    35.2866     34.44       34.69   31281785.0   \n",
+       "     2          1.0      35.37    35.9900     34.55       34.70   34260415.0   \n",
+       "     3          1.0      35.95    36.0400     35.36       35.37   28063362.0   \n",
+       "     4          1.0      36.34    36.5000     36.00       36.00   16776049.0   \n",
+       "\n",
+       "       level_0 Quarter  \n",
+       "AT&T 0    AT&T  2018Q1  \n",
+       "     1    AT&T  2018Q1  \n",
+       "     2    AT&T  2018Q1  \n",
+       "     3    AT&T  2018Q1  \n",
+       "     4    AT&T  2018Q1  "
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Convert the date column to quarters\n",
+    "combined_df['Quarter'] = pd.PeriodIndex(combined_df['Date'], freq='Q')\n",
+    "combined_df.head()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "296ff96c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 71,
-   "id": "3a4acf36",
+   "id": "0d3ad411",
    "metadata": {},
    "outputs": [
     {
@@ -455,7 +655,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "fcd241fa",
+   "id": "6c2217cb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +673,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "372d3114",
+   "id": "57f04f0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -505,7 +705,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8017ccf6",
+   "id": "461c1373",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -513,7 +713,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "ee2ba2d2",
+   "id": "c13f9825",
    "metadata": {},
    "outputs": [
     {
@@ -570,7 +770,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "31a4d774",
+   "id": "bf83d836",
    "metadata": {},
    "outputs": [],
    "source": []
