--- a/Stocks.ipynb
+++ b/Stocks.ipynb
@@ -500,7 +500,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### We decided to clean the data up by removing these columns as they were repeats and didnt add anything new."
+    "##### We decided to clean the data up by removing these columns as they were repeats and didnt add anything new."
    ]
   },
   {
